--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
   <script src="js/card.js"></script>
   <script src="js/form.js"></script>
   <script src="js/pin.js"></script>
+  <script src="js/filters.js"></script>
 
 </body>
 </html>
