--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <label class="ad-form__label">Фотографии жилья</label>
           <div class="ad-form__photo-container">
             <div class="ad-form__upload">
-              <input type="file" id="images" name="images" class="ad-form__input visually-hidden">
+              <input type="file" id="images" name="images" class="ad-form__input visually-hidden" multiple>
               <label for="images" class="ad-form__drop-zone">Загрузите или&nbsp;перетащите сюда фото</label>
             </div>
             <div class="ad-form__photo"></div>
@@ -249,6 +249,8 @@
   </template>
 
   <script src="js/data.js"></script>
+  <script src="js/images.js"></script>
+  <script src="js/avatar.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/util.js"></script>
   <script src="js/card.js"></script>
